# QtSpeedTest

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/speedtest/: CMakeLists.txt
examples/speedtest/easytest/: CMakeLists.txt
src/speedtest/: CMakeLists.txt  speedtest.cpp  speedtest.h  stclient.cpp
